// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FunctionDefinitions.sol - {"compiler":"0.5.0"} format 1`] = `
====================================options=====================================
compiler: "0.5.0"
parsers: ["slang"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
contract FunctionDefinitions {
  function () external {}
  function () external payable {}
}

=====================================output=====================================
contract FunctionDefinitions {
    function() external {}
    function() external payable {}
}

================================================================================
`;

exports[`FunctionDefinitions.sol format 1`] = `
====================================options=====================================
parsers: ["solidity-parse"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
contract FunctionDefinitions {
  function () external {}
  function () external payable {}
}

=====================================output=====================================
contract FunctionDefinitions {
    function() external {}
    function() external payable {}
}

================================================================================
`;
